<resources>
    <string name="app_name">HANKI</string>

    <string-array name="payment_paylist_array">
        <item>카카오페이</item>
        <item>네이버페이</item>
        <item>페이코</item>
        <item>카드 결제</item>
        <item>휴대폰 결제</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_likeShop">찜한 매장</string>
    <string name="title_nearbyShop">주변 매장</string>
    <string name="title_home">홈</string>
    <string name="title_numberTicket">번호표</string>
    <string name="title_foodTray">식판</string>

    <!-- Tutorial -->
    <string name="closeBtn">닫기</string>
    <string name="noshowBtn">다시 보지 않기</string>

    <!-- Navigation Drawer -->
    <string name="nav_welcomeMessage">김행키님 반갑습니다^^</string>
    <string name="nav_notice">공지사항</string>
    <string name="nav_event">이벤트</string>
    <string name="nav_ads">광고문의</string>
    <string name="nav_question">1:1 문의</string>
    <string name="nav_setting">환경설정</string>
    <string name="nav_appVersion">현재 버전 1.0.0</string>

    <string name="nav_mypage">My Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- ShopMain -->
    <string name="shopmain_menu">메뉴판</string>
    <string name="shopmain_shopInfo">매장 정보</string>
    <string name="shopmain_reviews">리뷰</string>

    <!-- ShopMenuDialog -->
    <string name="shopmenu_title">메뉴 주문</string>
    <string name="shopmenu_size">사이즈(필수 선택)</string>
    <string name="shopmenu_topping">토핑(추가 선택)</string>
    <string name="shopmenu_menu_count">수량</string>
    <string name="shopmenu_orderType">수령 방법</string>
    <string name="shopmenu_request">전달 사항</string>
    <string name="shopmenu_hint">ex) 조금 덜 맵게 해주세요.</string>
    <string name="shopmenu_total_pirce">총 주문 금액</string>
    <string name="shopmenu_cart">식판 담기</string>
    <string name="shopmenu_order">주문 하기</string>

    <!-- MyPage -->
    <string name="mypage_save">저장</string>
    <string name="mypage_email">이메일</string>
    <string name="mypage_password">비밀번호</string>
    <string name="mypage_phoneCertification">휴대폰 인증</string>
    <string name="mypage_changePwd">변경</string>
    <string name="mypage_changePhoneNumber">재인증</string>
    <string name="mypage_marketing">마케팅 정보 수신 동의</string>
    <string name="mypage_marketingMessage">행키에서 제공하는 다양한 이벤트와 정보를 받아보실 수 있어요!</string>
    <string name="mypage_emailAcceptance">메일 수신 동의</string>
    <string name="mypage_smsAcceptance">SMS 수신 동의</string>
    <string name="mypage_gender">성별</string>
    <string name="mypage_birthday">생일</string>
    <string name="mypage_deleteAccount">회원탈퇴</string>
    <string name="mypage_deleteAccountMessage">탈퇴하시려면 \'탈퇴합니다\'를\n아래 칸에 적어주세요.</string>
    <string name="mypage_delete">탈퇴합니다</string>
    <string name="mypage_deleteConfirm">확인</string>
    <string name="mypage_cancel">취소</string>
    <string name="mypage_acceptEmail">로 메일 수신에 동의하였습니다.</string>
    <string name="mypage_denyEmail">로 메일 수신을 거부하였습니다.</string>
    <string name="mypage_acceptSMS">로 SMS 수신에 동의하였습니다.</string>
    <string name="mypage_denySMS">로 SMS 수신을 거부하였습니다.</string>

    <!-- Home -->
    <string name="home_bluetoothMessage">매장 인식을 위해 먼저 Bluetooth를 켜주세요.</string>
    <string name="home_searchedShopDialogTitle">매장 선택</string>
    <string name="connectShopMessage">버튼을 눌러 매장과 어플을 연결시켜주세요!</string>
    <string name="search_beacon_msg1">들어오신 매장을 선택해주세요.</string>
    <string name="search_beacon_msg2">우층 상단의 X 터치 시 매장 인식을 중단합니다.</string>

    <!-- Review -->
    <string name="writeReview">작성하기</string>
    <string name="showMoreReview">더보기</string>
    <string name="review_save">등록</string>
    <string name="review_writeReview">리뷰 작성</string>
    <string name="deleteReviewMessage">작성하신 리뷰를 삭제하시겠습니까?</string>

    <!-- InfoData -->
    <string name="shopInfo_operationInfo">[운영 정보]</string>
    <string name="shopInfo_runTime">영업 시간</string>
    <string name="shopInfo_breakTime">브레이크 타임</string>
    <string name="shopInfo_holiday">휴무일</string>
    <string name="shopInfo_shopPhoneNum">전화번호</string>
    <string name="shopInfo_location">[매장 위치]</string>
    <string name="shopInfo_ownerName">대표자명</string>
    <string name="shopInfo_businessName">상호명</string>
    <string name="shopInfo_businessNum">사업자 번호</string>

    <!-- kakaoMap -->
    <string name="key">7da86d06d89abba0a40d64d2350ad8fb</string>

    <!-- Search -->
    <string name="search_hint">검색어를 입력해주세요.</string>

    <!-- Point -->
    <string name="point">Point</string>

    <!-- Permission -->
    <string name="permission_title">앱 권한 설정 안내</string>
    <string name="permission_msg1">* HANKI는 서비스에 꼭 필요한 권한만 선택적으로 접근 권한을 받고 있습니다.</string>
    <string name="permission_msg2">* 선택적 접근 권한은 해당 기능을 사용하실 때 승인이 필요하며, 승인하지 않으면 앱은 종료됩니다.</string>
    <string name="permission_dial">전화</string>
    <string name="permission_dial_explanation">매장 전화 걸기</string>
    <string name="permission_location">위치</string>
    <string name="permission_placeholder_explanation">주변 매장 위치 조회</string>
    <string name="permission_btn">네, 확인했습니다.</string>

</resources>
