<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notice"
            android:title="@string/nav_notice" />
        <item
            android:id="@+id/nav_event"
            android:title="@string/nav_event" />
        <item
            android:id="@+id/nav_ads"
            android:title="@string/nav_ads" />
        <item
            android:id="@+id/nav_question"
            android:title="@string/nav_question" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_appVersion"
            android:title="@string/nav_appVersion" />
    </group>
</menu>
