<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:gravity="center"
    android:paddingBottom="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <ImageButton
        android:id="@+id/mypage_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_clear_black_24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/deleteAccountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mypage_deleteAccountMessage"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mypage_cancelBtn" />

    <EditText
        android:id="@+id/mypage_deleteAccountEt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteAccountMessage"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_mypage_nickname"
        android:hint="@string/mypage_delete"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountMessage" />

    <Button
        android:id="@+id/mypage_deletionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ff5b5b"
        android:text="@string/mypage_deleteConfirm"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mypage_deleteAccountEt" />

</android.support.constraint.ConstraintLayout>